examples/test/testpolicy755.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy755
  namespace: namespace178
spec:
  podSelector:
    matchLabels:
      key8: value20
      key44: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value30
          key0: value4
      podSelector:
        matchLabels:
          key39: value42
          key21: value27
          key35: value47
